Add more detail to the plugin helper's settings.cfg file.

--- a/docker/settings.cfg
+++ b/docker/settings.cfg
@@ -1,17 +1,22 @@
 [orchestrator]
+# A secret string shared between the plugin helper and orchestrator
 shared_secret = "abcdef" 
 
 [web]
+# The IP address and port to listen on
 address = 127.0.0.1
 port = 8997
 
 [cert]
+# Certificate/key location and names.
 path = /etc/ssl/certs/orchestrator
 key = my-server.key
 cert = my-server.crt
 
 [docker]
 cgroup_dir = "/sys/fs/cgroup/devices/lxc" 
+# Be sure that the bridge has been created beforehand.
 bridge = br0
+# IP address and port for Docker API access. This should be a local interface's address (loopback is fine).
 address = 'http://127.0.0.1'
 port = 4243
