Settings.cfg elaboration and saner defaults for Orchestrator

--- a/settings.cfg
+++ b/settings.cfg
@@ -1,5 +1,5 @@
 [orchestrator]
-# Secret string that will be used for cross-process communication
+# Shared secret string that will be used for communication between the plugin helper and orchestrator
 shared_secret = "abcdef"
 
 [sql]
@@ -11,12 +11,9 @@ connection_string = "mysql2://orchestrator:uAU13fRt2pzx@localhost/orchestrator"
 init = true
 
 [web]
+# RESTful API listen address and port.
 address = 127.0.0.1
 port = 8998
-
-[plugin]
-cloud = 
-
 
 [cert]
 # The path under which certificates are stored
@@ -27,20 +24,17 @@ key = my-server.key
 cert = my-server.crt
 
 [docker]
-# The network details of the Docker helper application
-# The address should be the same as below
+# The address/port of the Docker helper application's RESTful API
 helper_address = 127.0.0.1
 helper_port = 8997
 
 # The network details of Docker's API
-# Should use the same host as above
+# Should use the same host as above and in the helper's configuration file
 url = 'http://127.0.0.1'
 port = 4243
 
 # Command to run within the image
-command = nginx-ipv6
-#command = sleep 60
+command = sleep 60
 
 # Base image to launch on client connection
-image = c/ubuntu-proj
-#image = base
+image = base
