address -> url fix in docker/settings.cfg, add pipework submodule

--- a/docker/settings.cfg
+++ b/docker/settings.cfg
@@ -10,13 +10,13 @@ port = 8997
 [cert]
 # Certificate/key location and names.
 path = /etc/ssl/certs/orchestrator
-key = my-server.key
-cert = my-server.crt
+key = privkey.pem
+cert = cacert.pem
 
 [docker]
 cgroup_dir = "/sys/fs/cgroup/devices/lxc" 
 # Be sure that the bridge has been created beforehand.
 bridge = br0
 # IP address and port for Docker API access. This should be a local interface's address (loopback is fine).
-address = 'http://127.0.0.1'
+url = 'http://127.0.0.1'
 port = 4243
