Saner defaults in settings files and bash scripts

--- a/settings.cfg
+++ b/settings.cfg
@@ -5,7 +5,7 @@ shared_secret = "abcdef"
 [sql]
 # 'connection_string' should be the sql connection string. eg. mysql://username:password@localhost/database
 # if connection_string is empty, an in-memory (non-persistant) sqlite database will be used.
-connection_string = "mysql2://orchestrator:uAU13fRt2pzx@localhost/orchestrator"
+connection_string = "mysql2://root:uZBGpY5mHu1VBr@localhost/orchestrator"
 # Set init to true for the first execution to create the database then switch it to 'false' for persistence
 # CAUTION - if 'true' this will reset your database
 init = true
@@ -19,9 +19,9 @@ port = 8998
 # The path under which certificates are stored
 path = /etc/ssl/certs/orchestrator
 # The key file relative to the above path
-key = my-server.key
+key = privkey.pem
 # The certificate file relative to the above path
-cert = my-server.crt
+cert = cacert.pem
 
 [docker]
 # The address/port of the Docker helper application's RESTful API
@@ -34,7 +34,7 @@ url = 'http://127.0.0.1'
 port = 4243
 
 # Command to run within the image
-command = sleep 60
+command = /usr/bin/startscript
 
 # Base image to launch on client connection
-image = base
+image = orchestrator/client
