--- a/docker/settings.cfg
+++ b/docker/settings.cfg
@@ -17,6 +17,7 @@ cert = cacert.pem
 cgroup_dir = "/sys/fs/cgroup/devices/lxc" 
 # Be sure that the bridge has been created beforehand.
 bridge = br0
+pipework = /opt/orchestrator/docker/pipework/pipework
 # IP address and port for Docker API access. This should be a local interface's address (loopback is fine).
 url = 'http://127.0.0.1'
 port = 4243
