--- a/settings.cfg
+++ b/settings.cfg
@@ -3,12 +3,14 @@
 shared_secret = "abcdef"
 
 [sql]
-# 'connection_string' should be the sql connection string. eg. mysql://username:password@localhost/database
-# if connection_string is empty, an in-memory (non-persistant) sqlite database will be used.
-connection_string = "mysql2://root:uZBGpY5mHu1VBr@localhost/orchestrator"
+# DB code can be globally enabled or disabled here
+enabled = true
 # Set init to true for the first execution to create the database then switch it to 'false' for persistence
 # CAUTION - if 'true' this will reset your database
 init = true
+# 'connection_string' should be the sql connection string. eg. mysql://username:password@localhost/database
+# if connection_string is empty, an in-memory (non-persistant) sqlite database will be used.
+connection_string = "mysql2://root:uZBGpY5mHu1VBr@localhost/orchestrator"
 
 [web]
 # RESTful API listen address and port.
