--- a/settings.cfg
+++ b/settings.cfg
@@ -9,7 +9,7 @@ enabled = true
 # CAUTION - if 'true' this will reset your database
 init = true
 # 'connection_string' should be the sql connection string. eg. mysql://username:password@localhost/database
-# if connection_string is empty, an in-memory (non-persistant) sqlite database will be used.
+# if connection_string is empty and the above 'enabled' option is true, an in-memory (non-persistant) sqlite database will be used.
 connection_string = "mysql2://root:uZBGpY5mHu1VBr@localhost/orchestrator"
 
 [web]
